--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Turístico</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div id="container">
         <main>
             <section id="meetBusan">
-                <h1>Sua próxima viagem:</h1>
+                <h1 class="headline">Sua próxima viagem:</h1>
                 <h2>Conheça Busan</h2>
-                <img src="assets/busanMain.jpg" alt="Foto da cidade Busan">
-                <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
+                <img src="assets/busanMain.jpg" alt="Foto da cidade Busan" id="busanMain">
+                <p id="description">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
             </section>
 
-            <div id="divider"></div>
+            <div class="divider"></div>
 
             <section id="forHistoryLovers">
-                <h1>Para os amantes de história:</h1>
+                <h1 class="headline">Para os amantes de história:</h1>
                 <h2>Descubra 3 destinos imperdíveis em Busan</h2>
                 <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
                 Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
@@ -83,7 +84,7 @@
                 </ol>
             </section>
 
-             <div id="divider"></div>
+             <div class="divider"></div>
 
 
             <section id="final">
