--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
                     <li> 
                         <h3>Templo Haedong Yonggungsa</h3>
 
-                        <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na <br> Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. <br> <br>
-                        Bom para:
+                        <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na <br> Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
+                        <br> <br>
+                        <p class="BomPara">Bom para:</p>
 
                             <ul>
-                                <li>
+                                <li class="historia">
                                     História
                                 </li>
                             </ul>
@@ -52,10 +53,11 @@
                         <h3>Templo Beomeo-sa</h3>
                         
                         <p>
-                            O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica <br> distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. <br> <br>
-                            Bom para:
+                            O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica <br> distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. 
+                            <br> <br>
+                            <p class="BomPara">Bom para:</p>
                             <ul>
-                                <li>
+                                <li class="historia">
                                     História
                                 </li>
                             </ul>
@@ -69,16 +71,17 @@
                         <h3>Parque Yongdusan</h3>
                         
                         <p>
-                            O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares <br> do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk <br> Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. <br> <br>
-                            Bom para: 
+                            O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares <br> do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk <br> Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
+                            <br> <br>
+                            <p class="BomPara">Bom para:</p> 
                             <ul>
-                                <li>
+                                <li class="casais">
                                     Casais
                                 </li>
-                                <li>
+                                <li class="familias">
                                     Famílias
                                 </li>
-                                <li>
+                                <li class="orcamento">
                                     Orçamento
                                 </li>
                             </ul>
